# delta-kernel-rs

./: .gitignore  AI_POLICY.md  CHANGELOG.md  CLAUDE.md  CLEANUP_PLAN.md  CONTRIBUTING.md  Cargo.toml  PLAN.md  PR_MESSAGE.md  README.md  cliff.toml  clippy.toml  iceberg_v3_nested_field_ids.mmd  profile_single_no_parsed_highly_selective.json.syms.json  profile_single_with_parsed_highly_selective.json.syms.json  release.sh  release.toml  rust-toolchain.toml  rustfmt.toml  test_table_changes.rs
acceptance/: CLAUDE.md  Cargo.toml  README.md  build.rs
acceptance/src/: data.rs  lib.rs  meta.rs
acceptance/tests/: acceptance_workloads_datafusion.rs  acceptance_workloads_reader.rs  dat_reader.rs  dat_reader_datafusion.rs  improved_dat_reader.rs  other.rs
benchmarks/: Cargo.toml  PROFILING.md  README.md  bench-registry.json  build.rs
benchmarks/benches/: insert_bench.rs  workload_bench.rs
benchmarks/ci/: parse_critcmp.py  run-benchmarks.sh
benchmarks/data/: generate_checkpoint_tables.py
benchmarks/src/: lib.rs  models.rs  predicate_parser.rs  registry.rs  reporting.rs  runners.rs  utils.rs  workload.rs
compliance-suite/: Cargo.toml  README.md  errata.json
compliance-suite/fixtures/: allow-column-defaults.json  append-only.json  catalog-managed.json  change-data-feed.json  check-constraints.json  clustering.json  column-mapping.json  deletion-vectors.json  domain-metadata.json  format-json.py  generated-columns.json  iceberg-compat-v1.json  iceberg-compat-v2.json  iceberg-compat-v3-preview.json  iceberg-writer-compat.json  identity-columns.json  in-commit-timestamp.json  invariants.json  materialize-partition-columns.json  protocol-validity.json  row-tracking.json  timestamp-ntz.json  type-widening.json  v2-checkpoint.json  vacuum-protocol-check.json  variant-shredding-preview.json  variant.json
compliance-suite/src/: lib.rs
compliance-suite/tests/: compliance.rs
datafusion/: Cargo.toml  build.rs
datafusion-executor/: Cargo.toml
datafusion-executor/src/: expression.rs  lib.rs  predicate.rs  scalar.rs
datafusion/examples/: simple_read.rs
datafusion/src/: error.rs  exec.rs  expressions.rs  lib.rs  log_table_provider.rs  schema.rs  session.rs  table_format.rs  table_provider.rs  utils.rs
default-engine/: CLAUDE.md  Cargo.toml
default-engine/src/: executor.rs  file_stream.rs  filesystem.rs  json.rs  lib.rs  parquet.rs  rest_store.rs  stats.rs  stats_verifier_tests.rs  storage.rs  utils.rs  vortex.rs
default-engine/test-utils/: Cargo.toml
default-engine/tests/: vortex_integration.rs
delta-kernel-datafusion-engine/: Cargo.toml
delta-kernel-datafusion-engine/src/: error.rs  executor.rs  lib.rs  testing.rs
delta-kernel-datafusion-engine/tests/: checkpoint_v2_classic_df.rs  cross_engine_parity.rs  fsr_real.rs  join_literals.rs  load_sink_and_schema_query.rs  parquet_field_id_parity.rs  partitioned_write_sink.rs  phase_operation_sm.rs  relation_and_kdf_sinks.rs  scan_correctness.rs  scan_real.rs  sm_kernel_reference_parity.rs  ssa_compile.rs  window_row_number.rs
delta-kernel-unity-catalog/: CLAUDE.md  Cargo.toml  README.md
delta-kernel-unity-catalog/examples/: uc-cli.rs
delta-kernel-unity-catalog/src/: committer.rs  constants.rs  conversions.rs  create_utils.rs  errors.rs  intents.rs  lib.rs  models.rs  utils.rs
delta-kernel-unity-catalog/tests/: e2e_in_memory.rs  integration_live_server.rs
delta-kernel-unitycatalog/: Cargo.toml  README.md
delta-kernel-unitycatalog/examples/: uc-cli.rs
delta-kernel-unitycatalog/src/: committer.rs  lib.rs
delta-kernel-unitycatalog/tests/: e2e_in_memory.rs
feature-tests/: Cargo.toml
feature-tests/src/: lib.rs
ffi/: .gitignore  CLAUDE.md  Cargo.toml  build.rs  cbindgen.toml
ffi/go/: .gitignore  Makefile  README.md  STATUS.md  build.sh  go.mod  go.sum
ffi/src/: alloc_stats.rs  arrow_bridge.rs  callback_engine.rs  callback_handlers.rs  commit_range.rs  committer.rs  delta_kernel_unity_catalog.rs  domain_metadata.rs  engine_data.rs  engine_funcs.rs  error.rs  ffi_metrics.rs  ffi_test_utils.rs  ffi_tracing.rs  handle.rs  incremental_scan.rs  lib.rs  log_path.rs  rest_engine.rs  scan.rs  schema.rs  schema_visitor.rs  table_changes.rs  test_ffi.rs  uc_catalog.rs  v2.rs
ffi/tests/: invalid_handle_double_mut_reference.rs  invalid_handle_moved_from_handle.rs  invalid_handle_mut_clone_handle.rs  invalid_handle_not_send.rs  invalid_handle_private_constructor.rs  invalid_handle_shared_as_mut.rs  invalid_handle_shared_not_sync.rs
kernel/: Cargo.toml  build.rs
kernel/benches/: expression_bench.rs  json_schema_bench.rs  metadata_bench.rs  utils.rs  workload_bench.rs
kernel/examples/: create_and_inspect_stats.rs  create_checkpoint_with_stats.rs  read_checkpoint_stats.rs
kernel/proto/: expressions.proto  operation.proto  plan.proto  schema.proto
kernel/src/: arrow.rs  arrow_compat.rs  async_df.rs  cancellation.rs  check_constraints.rs  checkpoint_stats_reader.rs  clustering.rs  column_trie.rs  commit_range.rs  committer.rs  conflict_detection.rs  create_table.rs  engine_data.rs  error.rs  history_manager.rs  hive_partition.rs  kernel_df.rs  last_checkpoint_hint.rs  lib.rs  listed_log_files.rs  log_path.rs  log_replay.rs  log_segment.rs  log_segment_files.rs  parquet.rs  partition.rs  path.rs  row_tracking.rs  schema.rs  schema_compat.rs  schema_reconciliation.rs  snapshot.rs  statistics.rs  stats_schema.rs  struct_patch.rs  table.rs  table_configuration.rs  table_manager.rs  table_properties.rs  table_property_protocol_config.rs  (+4 more)
kernel/tests/: CLAUDE.md  README.md  alter_table.rs  cdf.rs  checkpoint_stats.rs  checkpoint_transform.rs  clustering_e2e.rs  commit_range.rs  crc.rs  crc_e2e_read_write.rs  crc_reads.rs  create_table.rs  dv.rs  empty_log_files.rs  executor_deadlock_repro.rs  geo_read.rs  golden_tables.rs  (+34 more)
mem-test/: Cargo.toml
test-utils/: CLAUDE.md  Cargo.toml
uc-catalog/: Cargo.toml
unity-catalog-client/: Cargo.toml  README.md
unity-catalog-delta-client-api/: CLAUDE.md  Cargo.toml
unity-catalog-delta-rest-client/: CLAUDE.md  Cargo.toml  README.md
workloads/: CLAUDE.md  Cargo.toml
(+1379 files in other folders)
