[workspace]
members = [
    "acceptance",
    "benchmarks",
    "derive-macros",
    "ffi",
    "kernel",
    "kernel/examples/*",
    "test-utils",
    "feature-tests",
    "mem-test",
    "unity-catalog-delta-rest-client", # WIP: this is an experimental UC client for catalog-managed table work
    "delta-kernel-unity-catalog", # WIP: this is an experimental UC catalog implementation
    "unity-catalog-delta-client-api", # WIP: transport-agnostic UC client API traits
    "delta-kernel-datafusion-engine",
]
# note that in addition to the members above, the workspace includes examples:
# - inspect-table
# - read-table-changes
# - read-table-multi-threaded
# - read-table-single-threaded
# - write-table
resolver = "3"

# Patched DataFusion fork adding virtual-column hooks + parquet field-ID-aware root adaptation
# to `datafusion-datasource-parquet`. Tracks DataFusion 53.1.0 plus the
# `delta-kernel-vendor-patch` branch on the fork. Every datafusion crate in our dep graph
# must come from the fork — otherwise type identity diverges between the fork's parquet
# crate (which sees fork-built sibling types) and crates.io copies brought in transitively.
[patch.crates-io]
datafusion = { git = "https://github.com/OussamaSaoudi/datafusion.git", rev = "bf8dc9a7b" }
datafusion-catalog = { git = "https://github.com/OussamaSaoudi/datafusion.git", rev = "bf8dc9a7b" }
datafusion-catalog-listing = { git = "https://github.com/OussamaSaoudi/datafusion.git", rev = "bf8dc9a7b" }
datafusion-common = { git = "https://github.com/OussamaSaoudi/datafusion.git", rev = "bf8dc9a7b" }
datafusion-common-runtime = { git = "https://github.com/OussamaSaoudi/datafusion.git", rev = "bf8dc9a7b" }
datafusion-datasource = { git = "https://github.com/OussamaSaoudi/datafusion.git", rev = "bf8dc9a7b" }
datafusion-datasource-json = { git = "https://github.com/OussamaSaoudi/datafusion.git", rev = "bf8dc9a7b" }
datafusion-datasource-parquet = { git = "https://github.com/OussamaSaoudi/datafusion.git", rev = "bf8dc9a7b" }
datafusion-execution = { git = "https://github.com/OussamaSaoudi/datafusion.git", rev = "bf8dc9a7b" }
datafusion-expr = { git = "https://github.com/OussamaSaoudi/datafusion.git", rev = "bf8dc9a7b" }
datafusion-expr-common = { git = "https://github.com/OussamaSaoudi/datafusion.git", rev = "bf8dc9a7b" }
datafusion-functions = { git = "https://github.com/OussamaSaoudi/datafusion.git", rev = "bf8dc9a7b" }
datafusion-functions-aggregate = { git = "https://github.com/OussamaSaoudi/datafusion.git", rev = "bf8dc9a7b" }
datafusion-functions-aggregate-common = { git = "https://github.com/OussamaSaoudi/datafusion.git", rev = "bf8dc9a7b" }
datafusion-functions-nested = { git = "https://github.com/OussamaSaoudi/datafusion.git", rev = "bf8dc9a7b" }
datafusion-functions-window = { git = "https://github.com/OussamaSaoudi/datafusion.git", rev = "bf8dc9a7b" }
datafusion-functions-window-common = { git = "https://github.com/OussamaSaoudi/datafusion.git", rev = "bf8dc9a7b" }
datafusion-optimizer = { git = "https://github.com/OussamaSaoudi/datafusion.git", rev = "bf8dc9a7b" }
datafusion-physical-expr = { git = "https://github.com/OussamaSaoudi/datafusion.git", rev = "bf8dc9a7b" }
datafusion-physical-expr-adapter = { git = "https://github.com/OussamaSaoudi/datafusion.git", rev = "bf8dc9a7b" }
datafusion-physical-expr-common = { git = "https://github.com/OussamaSaoudi/datafusion.git", rev = "bf8dc9a7b" }
datafusion-physical-optimizer = { git = "https://github.com/OussamaSaoudi/datafusion.git", rev = "bf8dc9a7b" }
datafusion-physical-plan = { git = "https://github.com/OussamaSaoudi/datafusion.git", rev = "bf8dc9a7b" }
datafusion-pruning = { git = "https://github.com/OussamaSaoudi/datafusion.git", rev = "bf8dc9a7b" }
datafusion-session = { git = "https://github.com/OussamaSaoudi/datafusion.git", rev = "bf8dc9a7b" }
datafusion-sql = { git = "https://github.com/OussamaSaoudi/datafusion.git", rev = "bf8dc9a7b" }

[workspace.package]
edition = "2021"
homepage = "https://delta.io"
keywords = ["deltalake", "delta", "datalake"]
license = "Apache-2.0"
repository = "https://github.com/delta-io/delta-kernel-rs"
readme = "README.md"
rust-version = "1.88"
version = "0.21.0"
