[package]
name = "acceptance"
publish = false
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
version.workspace = true
rust-version.workspace = true

# for cargo-release
[package.metadata.release]
release = false

[features]
default = ["arrow"]
arrow = ["arrow-58"]
arrow-58 = ["delta_kernel/arrow-58", "test_utils/arrow-58"]
arrow-57 = ["delta_kernel/arrow-57", "test_utils/arrow-57"]

[dependencies]
delta_kernel = { path = "../kernel", features = [
  "default-engine-rustls",
  "internal-api",
] }
futures = "0.3"
itertools = "0.14"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
url = "2"

[build-dependencies]
ureq = "3.1"
flate2 = "1.1"
tar = "0.4"

[dev-dependencies]
datatest-stable = "0.3"
test-log = { version = "0.2", default-features = false, features = ["trace"] }
test_utils = { path = "../test-utils", default-features = false }
tempfile = "3"
test-case = { version = "3.3.1" }
tokio = { version = "1.47" }
tracing-subscriber = { version = "0.3", default-features = false, features = [
  "env-filter",
  "fmt",
] }

[[test]]
name = "dat_reader"
harness = false
