[package]
name = "delta_kernel_benchmarks"
publish = false
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true
rust-version.workspace = true

[features]
default = ["arrow"]
arrow = ["arrow-57"]
arrow-57 = ["delta_kernel/arrow-57"]
arrow-56 = ["delta_kernel/arrow-56"]

[build-dependencies]
flate2 = "1.1"
tar = "0.4"
ureq = "3.1"

[dependencies]
delta_kernel = { path = "../kernel", features = ["default-engine-rustls", "internal-api", "catalog-managed"] }
object_store = { version = "0.12.3", features = ["aws"] }
test_utils = { path = "../test-utils" }
rayon = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlparser = "0.55"
uc-catalog = { path = "../uc-catalog" }
tokio = { version = "1", features = ["rt-multi-thread"] }
uc-client = { path = "../uc-client" }
url = { version = "2", features = ["serde"] }

[dev-dependencies]
criterion = "0.5"
rstest = "0.23"
uc-client = { path = "../uc-client", features = ["test-utils"] }

[[bench]]
name = "workload_bench"
harness = false
