[package]
name = "delta_kernel_benchmarks"
publish = false
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true
rust-version.workspace = true

[features]
default = ["arrow"]
arrow = ["arrow-58"]
arrow-58 = ["delta_kernel/arrow-58"]
arrow-57 = ["delta_kernel/arrow-57"]

[build-dependencies]
flate2 = "1.1"
tar = "0.4"
ureq = "3.1"

[dependencies]
delta_kernel = { path = "../kernel", features = ["default-engine-rustls", "internal-api", "test-utils"] }
delta-kernel-unity-catalog = { path = "../delta-kernel-unity-catalog" }
itertools = "0.14"
object_store = { version = "0.12.3", features = ["aws"] }
rayon = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlparser = "0.55"
tokio = { version = "1", features = ["rt-multi-thread"] }
unity-catalog-delta-client-api = { path = "../unity-catalog-delta-client-api" }
unity-catalog-delta-rest-client = { path = "../unity-catalog-delta-rest-client" }
url = { version = "2", features = ["serde"] }

[dev-dependencies]
criterion = "0.5"
rstest = "0.23"

[[bench]]
name = "workload_bench"
harness = false
