[package]
name = "delta_kernel_benchmarks"
publish = false
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true
rust-version.workspace = true

[features]
default = ["arrow"]
arrow = ["arrow-58"]
arrow-58 = ["delta_kernel/arrow-58", "delta_kernel_workloads/arrow-58"]
arrow-57 = ["delta_kernel/arrow-57", "delta_kernel_workloads/arrow-57"]

[build-dependencies]
flate2 = "1.1"
sha2 = "0.10"
tar = "0.4"
ureq = { version = "3.1", default-features = false, features = ["native-tls", "gzip"] }

[dependencies]
delta_kernel = { path = "../kernel", features = ["default-engine-base", "internal-api"] }
delta_kernel_default_engine = { path = "../default-engine", features = ["rustls"] }
delta_kernel_workloads = { path = "../workloads" }
object_store = { version = "0.12.3", features = ["aws"] }
test_utils = { path = "../test-utils" }
rayon = "1"
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread"] }
url = { version = "2", features = ["serde"] }

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "workload_bench"
harness = false
