[package]
name = "compliance_suite"
publish = false
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
readme = "README.md"
version.workspace = true
rust-version.workspace = true

# for cargo-release
[package.metadata.release]
release = false

[features]
default = ["arrow"]
arrow = ["arrow-58"]
arrow-58 = ["delta_kernel/arrow-58"]
arrow-57 = ["delta_kernel/arrow-57"]

[dev-dependencies]
delta_kernel = { path = "../kernel", features = [
  "default-engine-rustls",
  "internal-api",
  "prettyprint",
] }
paste = "1"
serde_json = "1"
tokio = { version = "1.47" }
