[package]
name = "datafusion_executor"
description = "DataFusion-based PlanExecutor for delta_kernel declarative plans."
edition = "2021"
homepage = "https://delta.io"
license = "Apache-2.0"
repository = "https://github.com/delta-io/delta-kernel-rs"
readme = "README.md"
version = "0.26.0"
rust-version = "1.88"

# This crate is its OWN workspace, deliberately excluded from the root workspace. DataFusion 53
# tracks arrow-58 while kernel's default is arrow-59; if this crate were a root member, Cargo
# feature unification would compile kernel with both arrow majors at once (arrow-59 winning by
# precedence), linking DataFusion's arrow-58 types against kernel's arrow-59 -- a diamond that
# breaks the build. A separate workspace resolves this crate's kernel dep in isolation, so kernel
# gets arrow-58 only. Mirrors the `integration-tests` crate. See ../CLAUDE.md.
[workspace]

[dependencies]
delta_kernel = { path = "../kernel", version = "0.26.0", default-features = false, features = [
  "declarative-plans",
  "arrow-58",
  "default-engine-base",
] }
datafusion = "53"
