[package]
name = "delta-kernel-datafusion"
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
delta_kernel = { path = "../kernel", features = [
    "default-engine",
    "arrow",
    "internal-api",
] }

datafusion = { version = "47" }
datafusion-catalog = { version = "47" }
datafusion-common = { version = "47" }
datafusion-datasource = { version = "47" }
datafusion-execution = { version = "47" }
datafusion-expr = { version = "47" }
datafusion-expr-common = { version = "47" }
datafusion-functions = { version = "47" }
datafusion-physical-plan = { version = "47" }

async-trait = "0.1"
bytes = "1.6.0"
chrono = "0.4.40"
dashmap = "6.0.1"
futures = "0.3"
itertools = "0.14"
parking_lot = "0.12"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
url = "2.5.4"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
