[package]
name = "delta_kernel_default_engine"
description = "Default Arrow/Tokio-based engine implementation for delta_kernel."
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
version.workspace = true
rust-version.workspace = true

# for cargo-release
[package.metadata.release]
release = false

[dependencies]
delta_kernel = { path = "../kernel", features = [
  "arrow-conversion",
  "arrow-expression",
  "internal-api",
] }
bytes = "1.10"
futures = "0.3"
itertools = "0.14"
reqwest = "0.13"
tokio = { version = "1.47", features = ["rt-multi-thread"] }
url = "2"
uuid = { version = "1.18.0", features = ["v4"] }

[features]
default = []
arrow = ["arrow-57"]
arrow-57 = ["delta_kernel/arrow-57"]
arrow-56 = ["delta_kernel/arrow-56"]
native-tls = ["reqwest/native-tls"]
rustls = ["reqwest/http2"]

[dev-dependencies]
async-trait = "0.1"
rstest = "0.23"
serde_json = "1"
tempfile = "3"
test_utils = { path = "../test-utils", default-features = false }
tokio = { version = "1.47", features = ["rt-multi-thread", "macros"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["env-filter", "fmt"] }
hdfs-native-object-store = { version = "0.15.0" }
