[package]
name = "delta_kernel_default_engine"
description = "Default Arrow/Tokio-based engine implementation for delta_kernel."
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
version.workspace = true
rust-version.workspace = true

# for cargo-release
[package.metadata.release]
pre-release-replacements = [
  { file = "../README.md", search = "delta_kernel_default_engine = \\{ version = \"[a-z0-9\\.-]+\"", replace = "delta_kernel_default_engine = { version = \"{{version}}\"" },
]

[dependencies]
delta_kernel = { path = "../kernel", version = "0.25.0", features = [
  "default-engine-base",
  "internal-api",
] }
async-stream = "0.3"
async-trait = "0.1"
bytes = "1.10"
chrono = "0.4.41"
futures = "0.3"
itertools = "0.14"
reqwest = { version = "0.13", default-features = false, features = ["charset", "http2", "query", "system-proxy"] }
serde_json = "1"
tokio = { version = "1.47", features = ["rt-multi-thread"] }
tracing = { version = "0.1", features = ["log"] }
url = "2"
uuid = { version = "1.18.0", features = ["v4"] }

[features]
default = ["arrow", "rustls"]
arrow = ["arrow-59"]
arrow-59 = ["delta_kernel/arrow-59"]
arrow-58 = ["delta_kernel/arrow-58"]
native-tls = ["reqwest/native-tls"]
rustls = ["reqwest/rustls"]
declarative-plans = ["delta_kernel/declarative-plans"]

[dev-dependencies]
delta_kernel_default_engine_test_utils = { path = "./test-utils" }
rstest = "0.23"
serde = { version = "1", features = ["derive"] }
tempfile = "3"
test_utils = { path = "../test-utils", default-features = false }
tokio = { version = "1.47", features = ["rt-multi-thread", "macros"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["env-filter", "fmt"] }
wiremock = "0.6"
hdfs-native-object-store = { version = "0.16.0" }
