[package]
name = "delta-kernel-datafusion-engine"
description = "DataFusion-backed executor scaffold for Delta Kernel declarative plans (Phase 1.1)."
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
# Match default-executor: declarative IR + Arrow/Tokio engine so `delta_kernel::engine` and
# `delta_kernel::arrow` resolve consistently.
delta_kernel = { path = "../kernel", default-features = false, features = [
    "declarative-plans",
    "default-engine-rustls",
    "arrow",
    "internal-api",
] }

datafusion-common = { version = "53", default-features = false }
datafusion = { version = "53", default-features = false }
datafusion-catalog-listing = { version = "53", default-features = false }
datafusion-expr = { version = "53", default-features = false }
datafusion-execution = { version = "53", default-features = false }
datafusion-physical-expr = { version = "53", default-features = false }
datafusion-physical-expr-adapter = { version = "53", default-features = false }
datafusion-physical-expr-common = { version = "53", default-features = false }
datafusion-physical-plan = { version = "53", default-features = false }
datafusion-physical-optimizer = { version = "53", default-features = false }
datafusion-functions-window = { version = "53", default-features = false }
datafusion-functions = { version = "53", default-features = false }
datafusion-functions-nested = { version = "53", default-features = false }
datafusion-functions-json = { version = "0.53", default-features = false }
datafusion-datasource = { version = "53", default-features = false }
datafusion-datasource-json = { version = "53", default-features = false }
datafusion-datasource-parquet = { version = "53", default-features = false }

# Native parquet virtual columns (`RowNumber`) share arrow-rs APIs with DataFusion's parquet crate.
parquet = { version = "58", default-features = false, features = ["arrow", "async"] }
arrow-json = { version = "58", default-features = false }

async-stream = "0.3"
async-trait = "0.1"
futures = "0.3"
chrono = "0.4"
roaring = "0.11.2"
tokio = { version = "1", features = ["rt"] }
url = "2"
uuid = { version = "1", features = ["v4"] }

[features]
# Exposes `delta_kernel_datafusion_engine::testing`: buffered collectors over
# `read_relation` / `execute_plans` for integration tests and acceptance harnesses
# that want eager `Vec<RecordBatch>` materialization without re-wiring `.collect()`
# on the returned `DataFrame` and our private `DfResultIntoDelta` extension at every
# call site. Not for production use. Named `testing` (not `test_utils`) to avoid
# clashing with the workspace `test_utils` crate at import sites.
test-utils = []

[dev-dependencies]
# Self-dep activates the `test-utils` feature for this crate's own integration tests in
# `tests/`. Matches the pattern in `kernel/Cargo.toml`.
delta-kernel-datafusion-engine = { path = ".", features = ["test-utils"] }
parquet = { version = "58", default-features = false, features = ["arrow"] }
rstest = "0.23"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"
test_utils = { path = "../test-utils" }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
