[package]
name = "delta-kernel-unity-catalog"
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
rust-version.workspace = true
version.workspace = true

# for cargo-release
[package.metadata.release]
release = false

[features]
default = ["arrow"]
arrow = ["arrow-58"]
arrow-58 = ["delta_kernel/arrow-58"]
arrow-57 = ["delta_kernel/arrow-57"]
# Live-server E2E tests. Gated so normal `cargo nextest` never compiles or runs them.
# Tests additionally skip at runtime when UC_SERVER_URL is unset.
integration-test = []

[dependencies]
delta_kernel = { path = "../kernel", features = ["internal-api"] }
unity-catalog-delta-client-api = { path = "../unity-catalog-delta-client-api" }
itertools = "0.14"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
url = "2"
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
delta_kernel = { path = "../kernel", features = ["default-engine-base", "test-utils", "internal-api"] }
delta_kernel_default_engine = { path = "../default-engine", features = ["rustls"] }
unity-catalog-delta-rest-client = { path = "../unity-catalog-delta-rest-client", features = ["test-utils"] }
unity-catalog-delta-client-api = { path = "../unity-catalog-delta-client-api" }
test_utils = { path = "../test-utils" }
rstest = "0.23"
tempfile = "3"
# Only used by the gated live-server CREATE test, which hand-rolls the staging-tables/tables POSTs.
# Mirrors the rest-client's reqwest config.
reqwest = { version = "0.13", default-features = false, features = ["charset", "http2", "json", "rustls", "system-proxy"] }
