[package]
name = "delta-kernel-unity-catalog"
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
rust-version.workspace = true
version.workspace = true

# for cargo-release
[package.metadata.release]
release = false

[features]
default = ["arrow"]
arrow = ["arrow-59"]
arrow-59 = ["delta_kernel/arrow-59"]
arrow-58 = ["delta_kernel/arrow-58"]

[dependencies]
delta_kernel = { path = "../kernel", features = ["internal-api"] }
unity-catalog-delta-client-api = { path = "../unity-catalog-delta-client-api" }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
url = "2"

[dev-dependencies]
delta_kernel = { path = "../kernel", features = ["default-engine-base", "test-utils", "internal-api"] }
delta_kernel_default_engine = { path = "../default-engine", features = ["rustls"] }
unity-catalog-delta-rest-client = { path = "../unity-catalog-delta-rest-client", features = ["test-utils"] }
unity-catalog-delta-client-api = { path = "../unity-catalog-delta-client-api" }
test_utils = { path = "../test-utils" }
tempfile = "3"
rstest = "0.23"
