[package]
name = "feature_tests"
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
version.workspace = true

# for cargo-release
[package.metadata.release]
release = false

[dependencies]
delta_kernel = { path = "../kernel" }
delta_kernel_default_engine = { path = "../default-engine", optional = true }

[features]
default = ["arrow"]
arrow = ["arrow-57"]
arrow-57 = ["delta_kernel/arrow-57"]
arrow-56 = ["delta_kernel/arrow-56"]
default-engine-native-tls = ["delta_kernel_default_engine/native-tls"]
default-engine-rustls = ["delta_kernel_default_engine/rustls"]
