[package]
name = "feature_tests"
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
version.workspace = true

# for cargo-release
[package.metadata.release]
release = false

[dependencies]
delta_kernel = { path = "../kernel" }
# Direct deps for TLS crypto provider regression tests (see lib.rs).
reqwest = { version = "0.13", default-features = false, optional = true }
rustls = { version = "0.23", default-features = false, optional = true }

[features]
default = ["arrow"]
arrow = ["arrow-58"]
arrow-58 = ["delta_kernel/arrow-58"]
arrow-57 = ["delta_kernel/arrow-57"]
default-engine-native-tls = ["delta_kernel/default-engine-native-tls", "dep:rustls", "reqwest/native-tls"]
default-engine-rustls = ["delta_kernel/default-engine-rustls", "dep:rustls", "reqwest/rustls"]
