[package]
name = "delta_kernel_ffi"
description = "Provide C FFI bindings for the delta_kernel crate"
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
version.workspace = true
rust-version.workspace = true
build = "build.rs"

# for cargo-release
[package.metadata.release]
release = false

[lib]
crate-type = ["lib", "cdylib", "staticlib"]

[dependencies]
bytes = "1.10"
prost = { version = "0.13", optional = true }
tracing = "0.1"
tracing-core = { version = "0.1", optional = true }
tracing-subscriber = { version = "0.3", optional = true, features = [ "json" ] }
url = "2"
delta_kernel = { path = "../kernel", default-features = false, features = [
  "internal-api",
] }
delta_kernel_default_engine = { path = "../default-engine", default-features = false, optional = true }
delta_kernel_ffi_macros = { path = "../ffi-proc-macros", version = "0.26.0" }
delta-kernel-unity-catalog = { path = "../delta-kernel-unity-catalog", optional = true }
unity-catalog-delta-client-api = { path = "../unity-catalog-delta-client-api", optional = true }

[build-dependencies]
cbindgen = "0.29.2"
libc = "0.2.175"

[dev-dependencies]
paste = "1.0"
rand = "0.9.2"
serde = "1.0.219"
serde_json = "1.0.142"
test_utils = { path = "../test-utils", default-features = false }
tokio = { version = "1.47" }
trybuild = "1.0"
tempfile = "3.20.0"
itertools = "0.14.0"
rstest = "0.23"

[features]
default = ["default-engine-rustls", "arrow"]
default-engine-native-tls = ["delta_kernel/default-engine-base", "dep:delta_kernel_default_engine", "delta_kernel_default_engine/native-tls", "default-engine-base"]
default-engine-rustls = ["delta_kernel/default-engine-base", "dep:delta_kernel_default_engine", "delta_kernel_default_engine/rustls", "default-engine-base"]
delta-kernel-unity-catalog = [ "dep:delta-kernel-unity-catalog", "dep:unity-catalog-delta-client-api" ]
arrow = ["arrow-59"]
arrow-59 = ["delta_kernel/arrow-59"]
arrow-58 = ["delta_kernel/arrow-58"]

# Internal feature flag with the shared bits between default-engine-native-tls and
# default-engine-rustls. Enable one of those two on the FFI crate instead to also pick a TLS backend.
default-engine-base = ["delta_kernel/default-engine-base", "dep:delta_kernel_default_engine"]

# Declarative plan execution via PlanExecutor trait (experimental).
#
# Requires `arrow` because iterators returned from plan execution use Arrow to pass along data
# batches, and requires `default-engine-base` because the `PlanBasedEngine` FFI constructor pairs
# the plan executor with `ArrowEvaluationHandler`
declarative-plans = ["delta_kernel/declarative-plans", "dep:prost", "arrow", "default-engine-base"]

tracing = [ "tracing-core", "tracing-subscriber" ]
internal-api = []
test-ffi = []
